added socket ,notification and update booking logic